version 0.6.3 - xx-Jan-2009
 . Actions: ScaleTo & ScaleBy supports X and Y factors (issue #156)
 . CocosNode: fixed absolutePosition (issue #140)
 . CocosNode: unschedule timers only when running (issue #142)
 . Particles: added ParticleRain (issue #136)
 . Particles: center of emitter can be moved independently from position (issue #138)
 . TileMapAtlas: fixed bug when using TGA files (issue #124)
 . TileMapAtlas: supports up to 255 chars (issue #153)

version 0.6.2 - 24-Dec-2008
 . Actions: Accelerate & Speed ratios can be modified at runtime (issue #127)
 . CocosNode: added absolutePosition (issue #9 & issue #122)
 . CocosNode: tag is propagated when adding children (issue #118)
 . CocosNode: change change z-order at runtime (issue #59)
 . Demos: Chipmunk_Accel supports multiple touches (issue #129)
 . Demos: fixed typo in MenuTest (issue #111)
 . Demos: shows how to set multiple Touches and other options (issue #116)
 . Director: Touches work fast again (issue #126)
 . License: removed "GNU LGPL" from sources files (issue #115)
 . License: fixed grammar errors (issue #120)
 . Sprite & Animation: can be created from Texture2D, updated SpriteDemo example (issue #113)
 . TextureMgr: Avois duplicate cache (issue #121)
 . Transitions: FadeTransition supports variable color. Updated TransitionsDemo (issue #129)
 
version 0.6.1 - 08-Dec-2008
 . Documentation: Generation of doc fixes (issue #105)
 . Primitives: drawLine prototype fixed (issue #103)
 . XCode: all projects have "thumb compilation" turned off (issue #104)
 
version 0.6.0 - 05-Dec-2008
 . Actions: Sequences of Repeats fixes (issue #80)
 . Actions: Added RepeatForEver. Added example in SpritesDemo example (issue #93)
 . Actions: Repeat can be reversed (issue #92)
 . Actions: Memory leaks detected by static analyzer. (issue #90)
 . CocosNode: added support for Parallax scroller. Created ParallaxDemo example (issue #89)
 . CocosNode: removed deprecated 'named' methods (issue #91)