@@ -167,15 +167,15 @@ enum {
  */
 -(id) add: (CocosNode*)node z:(int)z parallaxRatio:(cpVect)c;
 /** Removes a child from the container
- * @warning It DOESN'T stop all running actions from the removed object and unschedules all scheduled selectors 
+ * @warning It DOESN'T stop all running actions from the removed object and it DOESN'T unschedules all scheduled selectors 
  */
 -(void) remove: (CocosNode*)node;
 /** Removes a child from the container given its tag
- * @warning It DOESN'T stop all running actions from the removed object and unschedules all scheduled selectors 
+ * @warning It DOESN'T stop all running actions from the removed object and it DOESN'T unschedules all scheduled selectors 
  */
 -(void) removeByTag:(int) tag;
 /** Removes all children from the container.
- * @warning It DOESN'T stop all running actions from the removed objecst and unschedules all scheduled selectors 
+ * @warning It DOESN'T stop all running actions from the removed object and it DOESN'T unschedules all scheduled selectors 
  */
 -(void) removeAll;
 /** Removes a child from the container by reference and stops all running actions and scheduled functions
